<resources>
    <string name="app_name">Visit RD</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="visits">View Visits</string>
    <string name="place_name">Place Name</string>
    <string name="place_location">Place Location</string>
    <string name="description_label">Description</string>
    <string name="description">Description</string>
    <string name="comments_label">Comments</string>
    <string name="user_name">User</string>
    <string name="comment_user">Comment</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="developers"><![CDATA[By {O & R}]]></string>
    <string name="des">TODO</string>
    <string name="places">Places</string>
    <string name="textview">TextView</string>
    <string name="lugares_para_visitar">Lugares para visitar</string>
    <string name="lugar">Lugar</string>
    <string name="des1">Des</string>
</resources>