<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLocationPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:text="@string/place_location" />

        <TextView
            android:id="@+id/tvNamePlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/place_name"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivPlace"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/des"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>