<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlaceActivity">

    <TextView
        android:id="@+id/tvNameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/place_name"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLocationP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/place_location"
        android:textAlignment="center" />

    <HorizontalScrollView
        android:id="@+id/svImages"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/llImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--            <ImageView-->
            <!--                android:id="@+id/ivFirst"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_margin="10dp"-->
            <!--                android:contentDescription="@string/todo"/>-->

            <!--            <ImageView-->
            <!--                android:id="@+id/ivSecond"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_margin="10dp"-->
            <!--                android:contentDescription="@string/todo"/>-->

            <!--            <ImageView-->
            <!--                android:id="@+id/ivThird"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_margin="10dp"-->
            <!--                android:contentDescription="@string/todo"/>-->

            <!--            <ImageView-->
            <!--                android:id="@+id/ivFourth"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_margin="10dp"-->
            <!--                android:contentDescription="@string/todo"/>-->

            <!--            <ImageView-->
            <!--                android:id="@+id/ivFifth"-->
            <!--                android:layout_width="150dp"-->
            <!--                android:layout_height="150dp"-->
            <!--                android:layout_margin="10dp"-->
            <!--                android:contentDescription="@string/todo"/>-->

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_vertical"
                android:layout_marginStart="260dp"
                android:text="@string/submit_rating" />

            <RatingBar
                android:id="@+id/rBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/Widget.AppCompat.RatingBar"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/description_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/comments_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:scrollIndicators="top" />

</LinearLayout>