<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:fadeScrollbars="true"
        android:outlineAmbientShadowColor="#FF5722"
        android:outlineSpotShadowColor="@color/purple_700"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/TVplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="top"
                android:text="@string/lugar"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#EF6C00"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TVplace"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:outlineAmbientShadowColor="#2196F3"
                    android:outlineSpotShadowColor="#FD0303"
                    app:cardCornerRadius="100dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="20dp">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:adjustViewBounds="true"
                        android:cropToPadding="true"
                        android:foregroundGravity="top"
                        android:scaleType="fitCenter"
                        tools:ignore="ContentDescription,ImageContrastCheck" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/TVdes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@id/linear1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:gravity="clip_vertical"
                android:text="@string/des1"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="RtlCompat" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tvLugaresVis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TVdes"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_gravity="center|center_vertical"
                android:layout_margin="5dp"
                android:fontFamily="monospace"
                android:text="@string/lugares_para_visitar"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVplaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLugaresVis"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/textview"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>













